:url-repo: https://github.com/asciidoctor/asciidoctor-tabs

This document provides a curated view of the changes to Asciidoctor Tabs per release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

=== Added

* Honor title on tabs block; apply normal subs to it
* Update the location hash (URL fragment) when a tab is activated

=== Fixed

* Decode fragment from URL so it can be matched against tab ID

== 1.0.0-alpha.5 (2022-10-23) - @mojavelinux

=== Added

* Link to stylesheet (style) and script (behavior) if `linkcss` attribute is set on document (#7)
* Honor safe mode settings (don't read files if safe mode is secure) (#7)

=== Changed

* Rename Docinfo::Styles class to Docinfo::Style (#22)
* Add smoke test for npm package (#19)

=== Fixed

* Prevent dlist ref from being registered again to avoid warning when filetype is not html (#21)
* Restore missing default style and behavior in JavaScript version by mapping data dir to dist folder in npm package (#18)

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.5[git tag] | {url-repo}/compare/v1.0.0-alpha.4\...v1.0.0-alpha.5[full diff]

== 1.0.0-alpha.4 (2022-10-08) - @mojavelinux

=== Added

* Define exports for behavior (tabs.js) and style (tabs.css) in npm package

=== Changed

* Use value of `idseparator` attribute in front of tabset number in auto-generated ID (#16)
* Add aliases for `Block` and `Docinfo` classes to `Extensions` class; remove workaround in js module
* Move `margin-bottom` style to tabset element
* Move behavior (tabs.js) and style (tabs.css) to dist folder in npm package

=== Fixed

* Increase specificity of sibling selector for tab to work with Antora default UI

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.4[git tag] | {url-repo}/compare/v1.0.0-alpha.3\...v1.0.0-alpha.4[full diff]

== 1.0.0-alpha.3 (2022-10-05) - @mojavelinux

=== Added

* Provide fallback behavior for non-HTML backends (filetype is not html) (#4)